quorum/test/tests/TypeChecker/Pass/ImpAssignIntegerInteger.quorum
integer x = 5
integer i = x
print x
print i