quorum/test/tests/TypeChecker/Fail/ImpAssignNumObjInteger.quorum
integer i = 5
Number num = i